--- a/index.html
+++ b/index.html
@@ -1,28 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
 
-let num = prompt("enter a Number")
-let grade;
+        //   i ues 'parseFloat' for resine       
 
-if(num>=80 && num<=100){
-
-console.log(grade="aa")
-}
-else(num>=60 && num<80);{
-    console.log(grade="a")
-    
-}
+        let score = parseFloat(prompt('enter youer score (0-100):'));
+        let grade = '';
 
 
+        if (score >= 80 && sce <= 100) {
+
+            grade = 'aa';
+        }
+        else if (score >= 70) {
+            grade = 'a';
+
+        }
+        else if (score >= 60) {
+            grade = "b";
+        }
+        else if (score >= 30) {
+            grade = 'c';
+        }
+        else {
+            grade = 'd';
+        }
+
+        console.log(grade)
 
 
     </script>
 </body>
+
 </html>
